--- a/research.html
+++ b/research.html
@@ -152,22 +152,19 @@
         <div class="project" id="project2">
             <p><b><a href="https://www.dropbox.com/scl/fi/tcprlouu2t1hcd8l810pd/Kendall-We-Could-Have-Been-Worse_DropBox.pdf?dl=0" target="_blank">
                     We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups
-                </a></b> (R&R) <br>
-                In this survey experiment, I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
+                </a></b> (R&R, </i>Political Behavior</i>) <br>
+                In this survey experiment, I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimised outgroups.</p>
         </div>
 
         <div class="project" id="project3">
             <p><b>Six Degrees of Slavery: Elite Persistence and Slave-Ownership in Britain</b> (with Theresa Gessler)<br>
                 We use embedded Wikipedia data to develop a novel computational measure of social proximity between individuals, and aggregate this over parliamentary periods in order to gauge how ties to slavery how persisted over time. Our analysis demonstrates how elite networks with dynastic connections to slavery persisted well into the 20th and 21st Centuries.</p>
         </div>
-    </section>
 
         <div class="project" id="project4">
             <p><b>Birthright Citizenship Closes Immigrants' Political and Social Integration Gap to Native Citizens</b> (with Jacopo Bassetto, Philip Grech, Dominik Hangartner, Giuseppe Pietrantuono, Helmut Rainer, and Malte Sandner)<br>
-                Utilising original survey data focusing on children of immigrants born within two months of the 2000 citizenship reform in Germany, we study the long-run effects of birthright citizenship on inter-group integration. The results demonstrate that birthright citizenship promotes higher levels of social and political integration especially among those with parents from Muslim-
-majority countries.</p>
+                Utilising original survey data focusing on children of immigrants born within two months of the 2000 citizenship reform in Germany, we study the long-run effects of birthright citizenship on inter-group integration. The results demonstrate that birthright citizenship promotes higher levels of social and political integration, especially among those with parents from Muslim-majority countries.</p>
         </div>
-    </section>
 
         <div class="project" id="project5">
             <p><b>Asylum Granted: The Integration and Well-Being Benefits of Attaining Refugee Status</b> (with Marine Casalis, Dominik Hangartner, Alexandra C. Hartman, and Rodrigo Sanchez Sienra)<br>
