--- a/research.html
+++ b/research.html
@@ -152,7 +152,7 @@
         <div class="project" id="project2">
             <p><b><a href="https://www.dropbox.com/scl/fi/tcprlouu2t1hcd8l810pd/Kendall-We-Could-Have-Been-Worse_DropBox.pdf?dl=0" target="_blank">
                     We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups
-                </a></b> (R&R, </i>Political Behavior</i>) <br>
+                </a></b> (R&R, <i>Political Behavior</i>) <br>
                 In this survey experiment, I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimised outgroups.</p>
         </div>
 
