--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             height: 300px; /* Adjust height as needed */
         }
 
-        header::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.7);
-        }
+header::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #99b3b3; /* Matches the nav background */
+}
 
         header h1, header p {
             position: relative;
