--- a/index.html
+++ b/index.html
@@ -22,26 +22,17 @@
 
         header {
             position: relative;
+            background-color: #99b3b3; /* Background color behind the image */
             background-image: url('image5.jpg');
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: contain; /* Use 'contain' to fit within the header */
+            background-size: contain; /* Keeps image fully visible */
             color: #333;
             padding: 2em 0;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             height: 300px; /* Adjust height as needed */
         }
-
-header::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #99b3b3; /* Matches the nav background */
-}
 
         header h1, header p {
             position: relative;
@@ -59,8 +50,8 @@ header::after {
         }
 
         #profile-image {
-            width: 350px; /* Adjusted image width */
-            height: auto; /* Maintain aspect ratio */
+            width: 350px;
+            height: auto;
             float: right;
             margin-left: 20px;
             border-radius: 50%;
