--- a/research.html
+++ b/research.html
@@ -133,6 +133,7 @@
         .project .abstract {
             font-size: 16px;
             font-style: italic;
+	    text-align: justify;
         }
     </style>
 </head>
