--- a/index.html
+++ b/index.html
@@ -145,22 +145,23 @@
         }
 
         /* Responsive adjustments */
-        @media (max-width: 768px) {
-            #about {
-                flex-direction: column; /* Stack on smaller screens */
-                align-items: center;
-            }
+@media (max-width: 768px) {
+    #about {
+        flex-direction: column;
+        align-items: center;
+    }
 
-            #about div {
-                padding-right: 0;
-                width: 100%; /* Take full width on mobile */
-            }
+    #about div {
+        padding-right: 0;
+        width: 100%;
+    }
 
-            #profile-image {
-                width: 70%; /* Adjust image size on mobile */
-                margin: 20px 0; /* Add margin for spacing */
-            }
-        }
+    #profile-image {
+        width: 70%;
+        height: auto; /* Ensure height adjusts proportionally */
+        margin: 20px 0;
+    }
+}
     </style>
 </head>
 
