--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h2>About Me</h2>
             <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zürich, specialising in historical
                 legacies, citizenship, inter-group prejudice reduction, and experimental methods. I received my PhD in
-                Social and Political Science from the European University Institute in 2023, having previously obtained
+                Social & Political Science from the European University Institute in 2023, having previously obtained
                 an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate
                 student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship
                 between collective memory and inter-group prejudice in post-imperial Britain, and my work also covers
