--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
     <section id="about">
         <div>
             <h2>About Me</h2>
-            <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zürich, specialising in historical
+            <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zürich, specialising in the study of historical
                 legacies, citizenship, inter-group prejudice reduction, and experimental methods. I received my PhD in
-                Social & Political Science from the European University Institute in 2023, having previously obtained
+                Social and Political Science from the European University Institute in 2023, having previously obtained
                 an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate
                 student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship
                 between collective memory and inter-group prejudice in post-imperial Britain, and my work also covers
-                the politics of guilt and shame, causal inference techniques, and nationalism. My work with the IPL
+                the politics of guilt and shame, political networks, nationalism, and causal inference techniques. My work with the IPL
                 focuses on the causal identification of the effects of citizenship and legal status changes for migrants
                 and host communities.</p>
         </div>
