--- a/research.html
+++ b/research.html
@@ -165,20 +165,26 @@ header {
     </div>
 
     <div class="project" id="project3">
-        <p><b><a href="https://www.dropbox.com/scl/fi/gd5eexrrlzb8abcbm8j7m/Six_Degrees_of_Slavery_1025.pdf?rlkey=z4buwdihgh0j56snyp994imbc&st=7ezg5rmj&dl=0">
-Six Degrees of Slavery: Elite Persistence and Slave-Ownership in Britain</b> (with Theresa Gessler)<br>
+  <p>
+    <b>
+      <a href="https://www.dropbox.com/scl/fi/gd5eexrrlzb8abcbm8j7m/Six_Degrees_of_Slavery_1025.pdf?rlkey=z4buwdihgh0j56snyp994imbc&st=7ezg5rmj&dl=0">
+        Six Degrees of Slavery: Elite Persistence and Slave-Ownership in Britain
+      </a>
+    </b>
+    (with Theresa Gessler, under review)
+  </p>
             <p class="abstract" style="text-align: justify;">Although legacies of slavery in Britain have received increasing attention in recent years, little evidence exists on how such legacies have shaped the country's political elite. This project seeks to quantify and chart these ties over time, using a novel computational technique harnessing Wikidata, a knowledge graph closely connected to Wikipedia, as a means of operationalising historical proximity between individuals. This technique enables the measurement of personal proximity to slavery, including via familial and social connections. Aggregating this data for politicians across a series of historical parliaments demonstrates how links to slavery persisted via dynastic and other social ties into the 20th Century, and the extent to which ties to slavery still exist among contemporary politicians. We demonstrate how slavery-backed networks have persisted more thoroughly in the Conservative Party and the House of Lords than in other institutions, and explore the robustness of this persistence to historical periods of reform. The results emphasise the extent to which slavery and its legacies continue to play an active role in British politics, as well as offering an efficient and reliable new method for measuring social proximity using online data.</p>
         </p>
     </div>
 
     <div class="project" id="project4">
-        <p><b>Birthright Citizenship Closes Immigrants' Political and Social Integration Gap to Native Citizens</b> (with Jacopo Bassetto, Philip Grech, Dominik Hangartner, Giuseppe Pietrantuono, Helmut Rainer, and Malte Sandner)<br>
+        <p><b>Birthright Citizenship Closes Immigrants' Political and Social Integration Gap to Native Citizens</b> (with Jacopo Bassetto, Philip Grech, Dominik Hangartner, Giuseppe Pietrantuono, Helmut Rainer, and Malte Sandner, under review)<br>
             <p class="abstract" style="text-align: justify;">The award of citizenship to immigrants' children born in the host country is a widespread yet increasingly contested policy. However, empirical evidence on whether birthright citizenship influences the long-term integration of these second-generation immigrants as adults remains scarce. We exploit a natural experiment in Germany, where a birthright citizenship reform introduced on January 1st, 2000, allows us to compare outcomes for children born just before and after the eligibility cutoff. Using a targeted survey of 1,060 immigrants born between November 1999 and February 2000, we identify the impact of birthright citizenship on multiple integration outcomes 24 years later. Our findings show that eligibility for birthright citizenship significantly enhances overall integration among adult children of immigrants (intention-to-treat effect: 0.34SD, 95\% CIs: 0.14SD, 0.54SD), with effects being concentrated on social integration (0.35SD increase, 95\% CIs: 0.15SD, 0.55SD) and political incorporation (0.26SD increase, 95\% CIs: 0.06SD, 0.47SD). These gains effectively close the political and social integration gap between second-generation immigrants and native citizens, primarily by improving the outcomes of those with parents from Muslim-majority countries. These findings document how birthright citizenship policies can play a pivotal role in facilitating integration from an early age, particularly for marginalized immigrants.</p>
         </p>
     </div>
 
     <div class="project" id="project5">
-        <p><b>Asylum Granted: The Integration and Well-Being Benefits of Attaining Refugee Status</b> (with Marine Casalis, Dominik Hangartner, Alexandra C. Hartman, and Rodrigo Sanchez Sienra)<br>
+        <p><b>Asylum Granted: The Integration and Well-Being Benefits of Attaining Refugee Status</b> (with Marine Casalis, Dominik Hangartner, Alexandra C. Hartman, and Rodrigo Sanchez Sienra, under review)<br>
             <p class="abstract" style="text-align: justify;">How does a person's immigration status shape well-being, integration and opportunities? Immigration status is particularly high-stakes for people fleeing persecution and violence, who may face uncertainty in their ability to reside legally and move freely. In many countries, the process of obtaining refugee status has become increasingly difficult and politicized. Existing literature is scarce and inconsistent, highlighting the need for robust evidence on the effects of refugee status. In this study, we address this empirical gap by combining register data linked with an original panel survey of asylum seekers and refugees in Greece conducted between 2022 and 2023. We use a difference-in-differences design to identify the impact of refugee status for labour market outcomes, integration into host communities, psychological distress and onward migration. We find that obtaining refugee status from the Greek state reduces psychological distress and improves overall integration, with effects being largest for navigational and psychological integration, while also increasing mobility within Europe. These results are robust to a wide variety of checks and specifications, providing evidence for the multidimensional impact of granting refugee status.</p>
         </p>
     </div>
