--- a/index.html
+++ b/index.html
@@ -174,11 +174,12 @@
         <p>Postdoctoral Fellow - ETH Zürich</p>
     </header>
 
-    <nav>
-        <a href="research.html" style="font-size: 1.1em;">Research</a>
-        <a href="https://www.dropbox.com/scl/fi/hh8i6dpxy9fvb8t3h469d/CV.pdf?rlkey=9rwknbflq9eo1blatsx54zt98&st=fruc6vpk&dl=0"
-            style="font-size: 1.1em;">CV</a>
-    </nav>
+<nav>
+    <a href="research.html" style="font-size: 1.1em;">Research</a>
+    <a href="teaching.html" style="font-size: 1.1em;">Teaching</a>
+    <a href="https://www.dropbox.com/scl/fi/hh8i6dpxy9fvb8t3h469d/CV.pdf?rlkey=9rwknbflq9eo1blatsx54zt98&st=fruc6vpk&dl=0"
+       style="font-size: 1.1em;">CV</a>
+</nav>
 
     <section id="about">
         <div>
