--- a/research.html
+++ b/research.html
@@ -88,10 +88,12 @@ header {
         }
 
         section h2 {
-            color: #333;
-            font-size: 2.2em;
-            margin-bottom: 20px;
-        }
+    color: #333;
+    font-size: 1.4em;   /* smaller than before */
+    font-style: italic;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
 
         .project {
             margin-bottom: 20px;
@@ -150,6 +152,9 @@ header {
     </nav>
 
      <section>
+
+<h2>Legacies of Violence in British Politics</h2>
+
     <div class="project" id="project1">
         <p><b><a href="https://www.dropbox.com/scl/fi/0tb52xf73lcbo70w3loqh/Blood_Runs_Thicker_Than_Water_1125.pdf?rlkey=21qxvajhxtz1xfmk6gcb7lsdn&st=2dzg0ls1&dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a></b> (under review) <br>
             <p class="abstract" style="text-align: justify;">When confronting historical harms committed by one’s nation, can invoking family history help inter-group reconciliation? This project investigates whether exposure to details of ancestral involvement in past atrocities affects contemporary racial prejudice towards the victimised outgroup. Introducing an experimental approach to this literature, white Britons are exposed to details suggestive of familial involvement in the imperial slave trade. The findings show that within the context of national involvement in slavery, an exoneration of one’s ancestors leads to reduced racial prejudice as well as greater levels of critical and reparatory attitudes. By contrast, a condemnation of one’s ancestors produces a defensive backlash, reflecting an unwillingness to reflect on information that threatens the moral status of one’s ingroup. These findings contribute to our understanding of how perpetrator groups confront difficult histories in Britain and elsewhere, and demonstrate how the invocation of cross- cutting identity aspects can be useful for inter-group reconciliation and the processing of collective guilt among perpetrator groups.</p>
@@ -176,6 +181,8 @@ header {
             <p class="abstract" style="text-align: justify;">Although legacies of slavery in Britain have received increasing attention in recent years, little evidence exists on how such legacies have shaped the country's political elite. This project seeks to quantify and chart these ties over time, using a novel computational technique harnessing Wikidata, a knowledge graph closely connected to Wikipedia, as a means of operationalising historical proximity between individuals. This technique enables the measurement of personal proximity to slavery, including via familial and social connections. Aggregating this data for politicians across a series of historical parliaments demonstrates how links to slavery persisted via dynastic and other social ties into the 20th Century, and the extent to which ties to slavery still exist among contemporary politicians. We demonstrate how slavery-backed networks have persisted more thoroughly in the Conservative Party and the House of Lords than in other institutions, and explore the robustness of this persistence to historical periods of reform. The results emphasise the extent to which slavery and its legacies continue to play an active role in British politics, as well as offering an efficient and reliable new method for measuring social proximity using online data.</p>
         </p>
     </div>
+
+<h2>Immigration and Group Identities</h2>
 
     <div class="project" id="project4">
         <p><b>Birthright Citizenship Closes Immigrants' Political and Social Integration Gap to Native Citizens</b> (with Jacopo Bassetto, Philip Grech, Dominik Hangartner, Giuseppe Pietrantuono, Helmut Rainer, and Malte Sandner, under review)<br>
