--- a/teaching.html
+++ b/teaching.html
@@ -88,10 +88,12 @@
         }
 
         section h2 {
-            color: #333;
-            font-size: 2.2em;
-            margin-bottom: 20px;
-        }
+    color: #333;
+    font-size: 1.6em;   /* smaller than before */
+    font-style: italic;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
 
         .teaching-text {
             font-size: 18px;
@@ -120,7 +122,7 @@
 
     <nav>
         <a href="index.html" style="font-size: 1.1em;">Home</a>
-        <a href="projects.html" style="font-size: 1.1em;">Projects</a>
+        <a href="research.html" style="font-size: 1.1em;">Research</a>
     </nav>
 
     <section>
@@ -128,8 +130,7 @@
 
         <p class="teaching-text">
             <!-- Write your teaching paragraph here -->
-            I will add a paragraph here describing my teaching experience, courses taught,
-            pedagogical approach, and interests in undergraduate and postgraduate teaching.
+            As part of the MACIS Master's programme at ETH Zürich, I teach an applied seminar on the Politics and Policies of International Migration, which involves planning and implementing an original piece of survey research with students. I have also taught causal inference and statistics courses at ETH. At the European University Institute I led a graduate workshop on survey experiments, and I also have undergraduate teaching experience at UCL and Oxford.
         </p>
     </section>
 
