--- a/research.html
+++ b/research.html
@@ -149,6 +149,7 @@ header {
 
     <nav>
         <a href="index.html" style="font-size: 1.1em;">Home</a>
+	<a href="teaching.html" style="font-size: 1.1em;">Teaching</a>
     </nav>
 
      <section>
