--- a/teaching.html
+++ b/teaching.html
@@ -130,7 +130,7 @@
 
         <p class="teaching-text">
             <!-- Write your teaching paragraph here -->
-            As part of the MACIS Master's programme at ETH Zürich, I teach an applied seminar on the Politics and Policies of International Migration, which involves planning and implementing an original piece of survey research with students. I have also taught causal inference and statistics courses at ETH. At the European University Institute I led a graduate workshop on survey experiments, and I also have undergraduate teaching experience at UCL and Oxford.
+            As part of the MACIS Master's programme at ETH Zürich, I teach an applied seminar on <i>The Politics and Policies of International Migration,</i> which involves planning and implementing an original piece of survey research with students. I have also taught causal inference and statistics courses at ETH. At the European University Institute I led a graduate workshop on survey experiments, and I also have undergraduate teaching experience at UCL and Oxford.
         </p>
     </section>
 
