--- a/research.html
+++ b/research.html
@@ -165,7 +165,7 @@ header {
     <div class="project" id="project2">
         <p><b><a href="https://www.dropbox.com/scl/fi/fm9w0qmsgo77ecepnntjc/We_Could_Have_Been_Worse_1025.pdf?rlkey=4ir2qavc8j6iuw4b0qc93g5pj&st=ocfm8vea&dl=0">
                     We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups
-                </a></b> (R&R, <i>Political Behavior</i>) <br>
+                </a></b> (R&R, <i>Political Behaviour</i>) <br>
             <p class="abstract" style="text-align: justify;">Can exposure to harmful acts committed by other groups obstruct meaningful confrontation with one’s own group history? This paper explores the extent to which favourable inter-group comparison – the invocation of sentiments such as “we might be bad, but at least we’re not as bad as them” – can affect how ingroup members confront legacies of perpetration. In doing so it contributes to understanding the psychological defences used by group members when confronted with historical information that threatens their group’s status. It focuses on the case of the UK, a country which often stands accused of having failed to come to terms with the harms committed in its imperial past. The results show that such historical ‘whataboutism’ (that is, deflective comparisons with ‘worse’ harms) actively increases prejudice against the harmed outgroup in contexts where historical identity threats are salient. In addition, shame-based reactions to learning about historical harms are shown to be concerned with self-image rather than genuine concern for the victims. The findings highlight the dangers of motivated defence mechanisms when confronting uncomfortable group histories.</p>
         </p>
     </div>
