--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <nav>
     <a href="research.html" style="font-size: 1.1em;">Research</a>
     <a href="teaching.html" style="font-size: 1.1em;">Teaching</a>
-    <a href="https://www.dropbox.com/scl/fi/hh8i6dpxy9fvb8t3h469d/CV.pdf?rlkey=9rwknbflq9eo1blatsx54zt98&st=fruc6vpk&dl=0"
+    <a href="https://www.dropbox.com/scl/fi/ois5hsertdawxzc3lev49/CV_0126.pdf?rlkey=enbh7hfk3h2yawodw2gqqq0ww&st=vfmzjjxv&dl=0"
        style="font-size: 1.1em;">CV</a>
 </nav>
 
