--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <nav>
     <a href="research.html" style="font-size: 1.1em;">Research</a>
     <a href="teaching.html" style="font-size: 1.1em;">Teaching</a>
-    <a href="https://www.dropbox.com/scl/fi/ois5hsertdawxzc3lev49/CV_0126.pdf?rlkey=enbh7hfk3h2yawodw2gqqq0ww&st=vfmzjjxv&dl=0"
+    <a href="https://www.dropbox.com/scl/fi/m7f7177xok0m782mcgg5o/CV__0126.pdf?rlkey=jojnwlnjj1aihwss5enq5msra&st=3mv4uh9o&dl=0"
        style="font-size: 1.1em;">CV</a>
 </nav>
 
