--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <nav>
     <a href="research.html" style="font-size: 1.1em;">Research</a>
     <a href="teaching.html" style="font-size: 1.1em;">Teaching</a>
-    <a href="https://www.dropbox.com/scl/fi/hh8i6dpxy9fvb8t3h469d/CV.pdf?rlkey=9rwknbflq9eo1blatsx54zt98&st=fruc6vpk&dl=0"
+    <a href="https://www.dropbox.com/scl/fi/ois5hsertdawxzc3lev49/CV_0126.pdf?rlkey=enbh7hfk3h2yawodw2gqqq0ww&st=vfmzjjxv&dl=0"
        style="font-size: 1.1em;">CV</a>
 </nav>
 
@@ -188,11 +188,8 @@
                 legacies, political behaviour, inter-group prejudice reduction, and experimental methods. I received my PhD in
                 Social and Political Science from the European University Institute in 2023, having previously obtained
                 an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate
-                student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship
-                between collective memory and inter-group prejudice in post-imperial Britain, and my work also covers
-                the politics of guilt and shame, democratic institutions in Britain, nationalism, and causal inference techniques. My work with the IPL
-                focuses on causal identification of the effects of shifting group dynamics between migrants
-                and host communities.</p>
+                student at UC Berkeley and Universidad Carlos III de Madrid. My PhD focused on  in post-imperial Britain, and My work at the IPL focuses on the causal identification of the effects of shifting group dynamics between migrants
+                and host communities, and my other research interests include the relationship between collective memory and inter-group prejudice.</p>
         </div>
         <img id="profile-image" src="image.jpg" alt="Profile Image">
     </section>
