--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 legacies, political behaviour, inter-group prejudice reduction, and experimental methods. I received my PhD in
                 Social and Political Science from the European University Institute in 2023, having previously obtained
                 an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate
-                student at UC Berkeley and Universidad Carlos III de Madrid. My PhD focused on  in post-imperial Britain, and My work at the IPL focuses on the causal identification of the effects of shifting group dynamics between migrants
+                student at UC Berkeley and Universidad Carlos III de Madrid. My work at the IPL focuses on the causal identification of the effects of shifting group dynamics between migrants
                 and host communities, and my other research interests include the relationship between collective memory and inter-group prejudice.</p>
         </div>
         <img id="profile-image" src="image.jpg" alt="Profile Image">
